@@ -113,7 +113,7 @@ public class SingleBetLimitCreateTest {
 
             BiPredicate<NatsLimitChangedV2Payload, String> filter = (payload, typeHeader) ->
                     NatsEventType.LIMIT_CHANGED_V2.getHeaderValue().equals(typeHeader) &&
-                            testData.kafkaLimitMessage.getId().equals(payload.getLimits().getFirst().getExternalId());
+                            testData.kafkaLimitMessage.getId().equals(payload.getLimits().get(0).getExternalId());
 
             testData.limitCreateEvent = natsClient.findMessageAsync(
                     subject,
@@ -122,14 +122,14 @@ public class SingleBetLimitCreateTest {
 
             assertAll("nats.limit_changed_v2_event.content_validation",
                     () -> assertEquals(NatsLimitEventType.CREATED.getValue(), testData.limitCreateEvent.getPayload().getEventType(), "nats.limit_changed_v2_event.payload.eventType"),
-                    () -> assertEquals(testData.kafkaLimitMessage.getId(), testData.limitCreateEvent.getPayload().getLimits().getFirst().getExternalId(), "nats.limit_changed_v2_event.limit.externalId"),
-                    () -> assertEquals(testData.kafkaLimitMessage.getLimitType(), testData.limitCreateEvent.getPayload().getLimits().getFirst().getLimitType(), "nats.limit_changed_v2_event.limit.limitType"),
-                    () -> assertTrue(testData.limitCreateEvent.getPayload().getLimits().getFirst().getIntervalType().isEmpty(), "nats.limit_changed_v2_event.limit.intervalType_empty"),
-                    () -> assertEquals(testData.kafkaLimitMessage.getAmount(), testData.limitCreateEvent.getPayload().getLimits().getFirst().getAmount().toString(), "nats.limit_changed_v2_event.limit.amount"),
-                    () -> assertEquals(testData.kafkaLimitMessage.getCurrencyCode(), testData.limitCreateEvent.getPayload().getLimits().getFirst().getCurrencyCode(), "nats.limit_changed_v2_event.limit.currencyCode"),
-                    () -> assertNotNull(testData.limitCreateEvent.getPayload().getLimits().getFirst().getStartedAt(), "nats.limit_changed_v2_event.limit.startedAt"),
-                    () -> assertEquals(0, testData.limitCreateEvent.getPayload().getLimits().getFirst().getExpiresAt(), "nats.limit_changed_v2_event.limit.expiresAt"),
-                    () -> assertTrue(testData.limitCreateEvent.getPayload().getLimits().getFirst().getStatus(), "nats.limit_changed_v2_event.limit.status")
+                    () -> assertEquals(testData.kafkaLimitMessage.getId(), testData.limitCreateEvent.getPayload().getLimits().get(0).getExternalId(), "nats.limit_changed_v2_event.limit.externalId"),
+                    () -> assertEquals(testData.kafkaLimitMessage.getLimitType(), testData.limitCreateEvent.getPayload().getLimits().get(0).getLimitType(), "nats.limit_changed_v2_event.limit.limitType"),
+                    () -> assertTrue(testData.limitCreateEvent.getPayload().getLimits().get(0).getIntervalType().isEmpty(), "nats.limit_changed_v2_event.limit.intervalType_empty"),
+                    () -> assertEquals(testData.kafkaLimitMessage.getAmount(), testData.limitCreateEvent.getPayload().getLimits().get(0).getAmount().toString(), "nats.limit_changed_v2_event.limit.amount"),
+                    () -> assertEquals(testData.kafkaLimitMessage.getCurrencyCode(), testData.limitCreateEvent.getPayload().getLimits().get(0).getCurrencyCode(), "nats.limit_changed_v2_event.limit.currencyCode"),
+                    () -> assertNotNull(testData.limitCreateEvent.getPayload().getLimits().get(0).getStartedAt(), "nats.limit_changed_v2_event.limit.startedAt"),
+                    () -> assertEquals(0, testData.limitCreateEvent.getPayload().getLimits().get(0).getExpiresAt(), "nats.limit_changed_v2_event.limit.expiresAt"),
+                    () -> assertTrue(testData.limitCreateEvent.getPayload().getLimits().get(0).getStatus(), "nats.limit_changed_v2_event.limit.status")
             );
         });
 
@@ -145,16 +145,16 @@ public class SingleBetLimitCreateTest {
                     (int) testData.limitCreateEvent.getSequence());
 
             assertAll("redis.wallet_aggregate.limit_content_validation",
-                    () -> assertEquals(testData.limitCreateEvent.getPayload().getLimits().getFirst().getExternalId(), aggregate.getLimits().getFirst().getExternalID(), "redis.wallet_aggregate.limit.externalId"),
-                    () -> assertEquals(testData.limitCreateEvent.getPayload().getLimits().getFirst().getLimitType(), aggregate.getLimits().getFirst().getLimitType(), "redis.wallet_aggregate.limit.limitType"),
-                    () -> assertTrue(testData.limitCreateEvent.getPayload().getLimits().getFirst().getIntervalType().isEmpty(), "redis.wallet_aggregate.limit.intervalType_empty"),
-                    () -> assertEquals(testData.limitCreateEvent.getPayload().getLimits().getFirst().getAmount(), aggregate.getLimits().getFirst().getAmount(), "redis.wallet_aggregate.limit.amount"),
-                    () -> assertEquals(BigDecimal.ZERO, aggregate.getLimits().getFirst().getSpent(), "redis.wallet_aggregate.limit.spent_zero"),
-                    () -> assertEquals(0, testData.limitCreateEvent.getPayload().getLimits().getFirst().getAmount().compareTo(aggregate.getLimits().getFirst().getRest()), "redis.wallet_aggregate.limit.rest"),
-                    () -> assertEquals(testData.limitCreateEvent.getPayload().getLimits().getFirst().getCurrencyCode(), aggregate.getLimits().getFirst().getCurrencyCode(), "redis.wallet_aggregate.limit.currencyCode"),
-                    () -> assertNotNull(testData.limitCreateEvent.getPayload().getLimits().getFirst().getStartedAt(), "redis.wallet_aggregate.limit.startedAt"),
-                    () -> assertEquals(0, aggregate.getLimits().getFirst().getExpiresAt(), "redis.wallet_aggregate.limit.expiresAt"),
-                    () -> assertTrue(aggregate.getLimits().getFirst().isStatus(), "redis.wallet_aggregate.limit.status")
+                    () -> assertEquals(testData.limitCreateEvent.getPayload().getLimits().get(0).getExternalId(), aggregate.getLimits().get(0).getExternalID(), "redis.wallet_aggregate.limit.externalId"),
+                    () -> assertEquals(testData.limitCreateEvent.getPayload().getLimits().get(0).getLimitType(), aggregate.getLimits().get(0).getLimitType(), "redis.wallet_aggregate.limit.limitType"),
+                    () -> assertTrue(testData.limitCreateEvent.getPayload().getLimits().get(0).getIntervalType().isEmpty(), "redis.wallet_aggregate.limit.intervalType_empty"),
+                    () -> assertEquals(testData.limitCreateEvent.getPayload().getLimits().get(0).getAmount(), aggregate.getLimits().get(0).getAmount(), "redis.wallet_aggregate.limit.amount"),
+                    () -> assertEquals(BigDecimal.ZERO, aggregate.getLimits().get(0).getSpent(), "redis.wallet_aggregate.limit.spent_zero"),
+                    () -> assertEquals(0, testData.limitCreateEvent.getPayload().getLimits().get(0).getAmount().compareTo(aggregate.getLimits().get(0).getRest()), "redis.wallet_aggregate.limit.rest"),
+                    () -> assertEquals(testData.limitCreateEvent.getPayload().getLimits().get(0).getCurrencyCode(), aggregate.getLimits().get(0).getCurrencyCode(), "redis.wallet_aggregate.limit.currencyCode"),
+                    () -> assertNotNull(testData.limitCreateEvent.getPayload().getLimits().get(0).getStartedAt(), "redis.wallet_aggregate.limit.startedAt"),
+                    () -> assertEquals(0, aggregate.getLimits().get(0).getExpiresAt(), "redis.wallet_aggregate.limit.expiresAt"),
+                    () -> assertTrue(aggregate.getLimits().get(0).isStatus(), "redis.wallet_aggregate.limit.status")
             );
         });
 
@@ -167,15 +167,15 @@ public class SingleBetLimitCreateTest {
 
             assertAll("cap.get_player_limits.limit_content_validation",
                     () -> assertEquals(HttpStatus.OK, response.getStatusCode(), "cap.get_player_limits.status_code"),
-                    () -> assertTrue(response.getBody().getData().getFirst().isStatus(), "cap.get_player_limits.limit.status"),
-                    () -> assertTrue(response.getBody().getData().getFirst().getPeriod().toString().isEmpty(), "cap.get_player_limits.limit.intervalType_empty"),
-                    () -> assertEquals(testData.limitCreateEvent.getPayload().getLimits().getFirst().getCurrencyCode(), response.getBody().getData().getFirst().getCurrency(), "cap.get_player_limits.limit.currency"),
-                    () -> assertEquals(testData.limitCreateEvent.getPayload().getLimits().getFirst().getAmount(), response.getBody().getData().getFirst().getAmount(), "cap.get_player_limits.limit.amount"),
-                    () -> assertEquals(testData.limitCreateEvent.getPayload().getLimits().getFirst().getAmount(), response.getBody().getData().getFirst().getRest(), "cap.get_player_limits.limit.rest"),
-                    () -> assertNotNull(response.getBody().getData().getFirst().getCreatedAt(), "cap.get_player_limits.limit.createdAt"),
-                    () -> assertNull(response.getBody().getData().getFirst().getDeactivatedAt(), "cap.get_player_limits.limit.deactivatedAt"),
-                    () -> assertNotNull(response.getBody().getData().getFirst().getStartedAt(), "cap.get_player_limits.limit.startedAt"),
-                    () -> assertNull(response.getBody().getData().getFirst().getExpiresAt(), "cap.get_player_limits.limit.expiresAt")
+                    () -> assertTrue(response.getBody().getData().get(0).isStatus(), "cap.get_player_limits.limit.status"),
+                    () -> assertTrue(response.getBody().getData().get(0).getPeriod().toString().isEmpty(), "cap.get_player_limits.limit.intervalType_empty"),
+                    () -> assertEquals(testData.limitCreateEvent.getPayload().getLimits().get(0).getCurrencyCode(), response.getBody().getData().get(0).getCurrency(), "cap.get_player_limits.limit.currency"),
+                    () -> assertEquals(testData.limitCreateEvent.getPayload().getLimits().get(0).getAmount(), response.getBody().getData().get(0).getAmount(), "cap.get_player_limits.limit.amount"),
+                    () -> assertEquals(testData.limitCreateEvent.getPayload().getLimits().get(0).getAmount(), response.getBody().getData().get(0).getRest(), "cap.get_player_limits.limit.rest"),
+                    () -> assertNotNull(response.getBody().getData().get(0).getCreatedAt(), "cap.get_player_limits.limit.createdAt"),
+                    () -> assertNull(response.getBody().getData().get(0).getDeactivatedAt(), "cap.get_player_limits.limit.deactivatedAt"),
+                    () -> assertNotNull(response.getBody().getData().get(0).getStartedAt(), "cap.get_player_limits.limit.startedAt"),
+                    () -> assertNull(response.getBody().getData().get(0).getExpiresAt(), "cap.get_player_limits.limit.expiresAt")
             );
         });
 
@@ -186,13 +186,13 @@ public class SingleBetLimitCreateTest {
 
             assertAll("fapi.get_single_bet_limits.limit_content_validation",
                     () -> assertEquals(HttpStatus.OK, response.getStatusCode(), "fapi.get_single_bet_limits.status_code"),
-                    () -> assertEquals(testData.limitCreateEvent.getPayload().getLimits().getFirst().getExternalId(), response.getBody().getFirst().getId(), "fapi.get_single_bet_limits.limit.id"),
-                    () -> assertEquals(testData.limitCreateEvent.getPayload().getLimits().getFirst().getCurrencyCode(), response.getBody().getFirst().getCurrency(), "fapi.get_single_bet_limits.limit.currency"),
-                    () -> assertTrue(response.getBody().getFirst().isStatus(), "fapi.get_single_bet_limits.limit.status"),
-                    () -> assertEquals(testData.limitCreateEvent.getPayload().getLimits().getFirst().getAmount(), response.getBody().getFirst().getAmount(), "fapi.get_single_bet_limits.limit.amount"),
-                    () -> assertTrue(response.getBody().getFirst().getUpcomingChanges().isEmpty(), "fapi.get_single_bet_limits.limit.upcomingChanges_empty"),
-                    () -> assertNull(response.getBody().getFirst().getDeactivatedAt(), "fapi.get_single_bet_limits.limit.deactivatedAt"),
-                    () -> assertTrue(response.getBody().getFirst().isRequired(), "fapi.get_single_bet_limits.limit.required")
+                    () -> assertEquals(testData.limitCreateEvent.getPayload().getLimits().get(0).getExternalId(), response.getBody().get(0).getId(), "fapi.get_single_bet_limits.limit.id"),
+                    () -> assertEquals(testData.limitCreateEvent.getPayload().getLimits().get(0).getCurrencyCode(), response.getBody().get(0).getCurrency(), "fapi.get_single_bet_limits.limit.currency"),
+                    () -> assertTrue(response.getBody().get(0).isStatus(), "fapi.get_single_bet_limits.limit.status"),
+                    () -> assertEquals(testData.limitCreateEvent.getPayload().getLimits().get(0).getAmount(), response.getBody().get(0).getAmount(), "fapi.get_single_bet_limits.limit.amount"),
+                    () -> assertTrue(response.getBody().get(0).getUpcomingChanges().isEmpty(), "fapi.get_single_bet_limits.limit.upcomingChanges_empty"),
+                    () -> assertNull(response.getBody().get(0).getDeactivatedAt(), "fapi.get_single_bet_limits.limit.deactivatedAt"),
+                    () -> assertTrue(response.getBody().get(0).isRequired(), "fapi.get_single_bet_limits.limit.required")
             );
         });
     }
